--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
                 <button class="liter-todos">Pending</button>
                 <button class="liter-todos">Completed</button>
             </div>
+            <button>Delete All</button>
         </div>
+     </div>
+     <div class="table">
+        
      </div>
     <script src="script.js"></script>
 </body>
