add tables code in HTML Files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,38 @@
         </div>
      </div>
      <div class="table">
-        
+        <table>
+            <thead>
+                <tr>
+                    <th>Task</th>
+                    <th>Date</th>
+                    <th>Status</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Text</td>
+                    <td>date</td>
+                    <td>pending</td>
+                    <td>
+                        <button>Edit</button>
+                        <button>Do</button>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Text</td>
+                    <td>date</td>
+                    <td>pending</td>
+                    <td>
+                        <button>Edit</button>
+                        <button>Do</button>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
      </div>
     <script src="script.js"></script>
 </body>
