add another code for JS and CSS files

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button>Delete All</button>
         </div>
      </div>
+     <div id="alert-message"></div>
      <div class="table">
         <table>
             <thead>
@@ -33,26 +34,6 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Text</td>
-                    <td>date</td>
-                    <td>pending</td>
-                    <td>
-                        <button>Edit</button>
-                        <button>Do</button>
-                        <button>Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Text</td>
-                    <td>date</td>
-                    <td>pending</td>
-                    <td>
-                        <button>Edit</button>
-                        <button>Do</button>
-                        <button>Delete</button>
-                    </td>
-                </tr>
             </tbody>
         </table>
      </div>
