--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <input type="text" placeholder="Add Todo ..." id="task-input" />
             <input type="date" id="date-input" />
             <button id="add-button">Add</button>
+            <button id="edit-button">Add</button>
         </div>
         <div class="todos-operator">
             <div>
