add filter option in Todo APP - First Update

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </div>
         <div class="todos-operator">
             <div>
-                <button class="liter-todos">All</button>
-                <button class="liter-todos">Pending</button>
-                <button class="liter-todos">Completed</button>
+                <button class="filter-todos" data-filter="all">All</button>
+                <button class="filter-todos" data-filter="pending">Pending</button>
+                <button class="filter-todos" data-filter="completed">Completed</button>
             </div>
-            <button id="delete-all-buttton">Delete All</button>
+            <button id="delete-all-button">Delete All</button>
         </div>
     </div>
     <div id="alert-message"></div>
